rerun and verify pipeline stages

--- a/pipeline/1-get-cta-stations.ipynb
+++ b/pipeline/1-get-cta-stations.ipynb
@@ -21,9 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
-    "bus_routes_file = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
-    "bus_stops_file = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")"
+    "train_file_out = os.path.join(DATA_FOLDER, \"raw\", \"train_stations.geojson\")\n",
+    "bus_routes_file_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_routes.geojson\")\n",
+    "bus_stops_file_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_stops.geojson\")"
    ]
   },
   {
@@ -168,9 +168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_stations.to_file(train_file, index=False)\n",
-    "bus_routes.to_file(bus_routes_file, index=False)\n",
-    "bus_stops.to_file(bus_stops_file, index=False)"
+    "train_stations.to_file(train_file_out, index=False)\n",
+    "bus_routes.to_file(bus_routes_file_out, index=False)\n",
+    "bus_stops.to_file(bus_stops_file_out, index=False)"
    ]
   }
  ],
