--- a/pipeline/2-get-divvy-stations.ipynb
+++ b/pipeline/2-get-divvy-stations.ipynb
@@ -7,10 +7,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from os.path import basename\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from zipfile import ZipFile\n",
     "\n",
     "from data.constants import WORLD_CRS, DATA_FOLDER\n",
     "from data.divvy import DivvyClient\n",
@@ -65,13 +62,7 @@
     }
    ],
    "source": [
-    "# TODO! Refactor this logic into divvy.py\n",
-    "bike_stations = []\n",
-    "for zip_path, _, station_path in tqdm(filter(lambda x: x[2], client.get_bucket_paths())):\n",
-    "    with (client.s3.open(zip_path, mode='rb') as s3f, ZipFile(s3f) as zf, zf.open(station_path) as stationf):\n",
-    "        df = client.read_station_file(stationf).assign(vintage=basename(zip_path))\n",
-    "        gdf = client.s3_point_gdf(df, \"longitude\",\"latitude\",\"geometry\")\n",
-    "        bike_stations.append(gdf)"
+    "bike_stations = client.s3_bike_stations()"
    ]
   },
   {
