--- a/pipeline/3-get-tracts.ipynb
+++ b/pipeline/3-get-tracts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,12 @@
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "\n",
-    "from data.constants import TRACT_TABLE, LOCAL_CRS, COMM_AREA_TABLE, DATA_FOLDER"
+    "from data.constants import TRACT_TABLE, LOCAL_CRS, WORLD_CRS, COMM_AREA_TABLE, DATA_FOLDER"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,23 +43,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "tract_points = gpd.read_file(TRACT_TABLE).filter(['geoid10','geometry']).drop_duplicates()\n",
     "tract_points['geoid10'] = pd.to_numeric(tract_points['geoid10'])\n",
-    "tract_points['centroid'] = tract_points['geometry'].to_crs(LOCAL_CRS).centroid.to_wkt()"
+    "tract_points['centroid'] = tract_points['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "comm_points = gpd.read_file(COMM_AREA_TABLE).filter(['area_num_1','geometry']).drop_duplicates()\n",
-    "comm_points['centroid'] = comm_points['geometry'].to_crs(LOCAL_CRS).centroid.to_wkt()"
+    "comm_points['centroid'] = comm_points['geometry'].to_crs(LOCAL_CRS).centroid.to_crs(WORLD_CRS).to_wkt()"
    ]
   },
   {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
