--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -26,29 +26,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_in = os.path.join(DATA_FOLDER, \"interim\", \"train_stations.geojson\")\n",
-    "bus_routes_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
-    "bus_stops_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
-    "bike_stations_file_in = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations.geojson\")\n",
-    "tract_file_in = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geojson\")\n",
-    "comm_file_in = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")"
+    "train_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
+    "bus_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
+    "bike_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.geoparquet\")\n",
+    "uber_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
-    "bus_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
-    "bike_rides_out = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.csv\")\n",
-    "uber_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,21 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline In"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_stations = gpd.read_file(train_file_in)\n",
-    "bus_routes = gpd.read_file(bus_routes_file_in)\n",
-    "bus_stops = gpd.read_file(bus_stops_file_in)\n",
-    "tract_points = gpd.read_file(tract_file_in)\n",
-    "comm_points = gpd.read_file(comm_file_in)\n",
-    "bike_stations = gpd.read_file(bike_stations_file_in)"
+    "# Pipeline In\n",
+    "\n",
+    "(None)"
    ]
   },
   {
@@ -112,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:33, 33.25s/it]"
+      "1it [00:24, 24.30s/it]"
      ]
     },
     {
@@ -233,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [00:38, 17.03s/it]"
+      "2it [00:27, 11.74s/it]"
      ]
     },
     {
@@ -247,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:46, 12.69s/it]"
+      "3it [00:30,  8.09s/it]"
      ]
     },
     {
@@ -261,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4it [00:59, 12.75s/it]"
+      "4it [00:36,  6.98s/it]"
      ]
     },
     {
@@ -275,7 +249,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [01:09, 11.98s/it]"
+      "5it [00:43,  7.21s/it]"
      ]
     },
     {
@@ -289,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6it [01:26, 13.51s/it]"
+      "6it [00:52,  7.75s/it]"
      ]
     },
     {
@@ -303,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [01:47, 16.01s/it]"
+      "7it [01:02,  8.45s/it]"
      ]
     },
     {
@@ -317,7 +291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8it [01:59, 14.87s/it]"
+      "8it [01:11,  8.65s/it]"
      ]
     },
     {
@@ -331,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [02:15, 15.10s/it]\n"
+      "9it [01:21,  9.06s/it]\n"
      ]
     }
    ],
@@ -346,13 +320,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO! \n",
-    "# We should buffer-agg these bike stations!\n",
-    "# Each station is actually a single dock, not the rack! (I think ...)"
+    "bike_rides = gpd.GeoDataFrame(bike_rides, geometry='geometry')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note, according to https://data.cityofchicago.org/Transportation/Divvy-Bicycle-Stations/bbyy-e7gq/about_data\n",
+    "# each station contains multiple bike docks. Nevertheless in this data there are \n",
+    "# up to thousands of unique Points per station_id. When we agg station_id -> MultiPoint\n",
+    "# and compute the area and perimeter of the minimum bounding circle, convex hull, etc,\n",
+    "# they are typically small but can be rather large (tens of thousands of feet, millions of ft^2)\n",
+    "# therefore I think we should not ever merge on station_id and only rely on X,Y when given\n",
+    "\n",
+    "# Analysis commented out ...\n",
+    "# from shapely import from_wkt\n",
+    "# from data.constants import LOCAL_CRS, WORLD_CRS\n",
+    "# from shapely.geometry import MultiPoint\n",
+    "# from shapely import minimum_bounding_circle, minimum_rotated_rectangle\n",
+    "\n",
+    "# bike_rides['geometry'] = bike_rides['geometry'].apply(from_wkt)\n",
+    "# bike_rides = gpd.GeoDataFrame(bike_rides, geometry='geometry', crs=WORLD_CRS).to_crs(LOCAL_CRS)\n",
+    "\n",
+    "# station_geos = bike_rides.groupby('station_id')['geometry'].agg(['nunique',lambda x: MultiPoint(list(set(x)))])\n",
+    "\n",
+    "# station_geos.columns = ['n','points']\n",
+    "# station_geos['circle'] = station_geos['points'].apply(minimum_bounding_circle)\n",
+    "# station_geos['rect'] = station_geos['points'].apply(minimum_rotated_rectangle)\n",
+    "# station_geos['hull'] = station_geos['points'].apply(lambda x: x.convex_hull)\n",
+    "\n",
+    "# print(station_geos['n'].describe())\n",
+    "\n",
+    "# station_geos[['circle','rect','hull']].map(lambda x: x.area).agg('mean',axis=1).hist()\n",
+    "# station_geos[['circle','rect','hull']].map(lambda x: x.length).agg('mean',axis=1).hist()"
    ]
   },
   {
@@ -370,21 +377,21 @@
    "source": [
     "uber_pickups = uber_client.soda_get_uber(select=\"\"\"\n",
     "                                         date_trunc_ymd(trip_start_timestamp) as start_date, \n",
-    "                                         pickup_census_tract as start_tract,\n",
+    "                                         pickup_census_tract,\n",
     "                                         count(trip_id) as rides\n",
     "                                         \"\"\",\n",
     "                                         where_start=iso_to_ymd(data_start_iso), \n",
     "                                         where_end=iso_to_ymd(data_end_iso), \n",
-    "                                         group=\"start_date, start_tract\",\n",
+    "                                         group=\"start_date, pickup_census_tract\",\n",
     "                                         pickup=True)\n",
     "uber_dropoffs = uber_client.soda_get_uber(select=\"\"\"\n",
     "                                         date_trunc_ymd(trip_end_timestamp) as end_date, \n",
-    "                                         dropoff_census_tract as end_tract,\n",
+    "                                         dropoff_census_tract,\n",
     "                                         count(trip_id) as rides\n",
     "                                         \"\"\",\n",
     "                                         where_start=iso_to_ymd(data_start_iso), \n",
     "                                         where_end=iso_to_ymd(data_end_iso), \n",
-    "                                         group=\"end_date, end_tract\",\n",
+    "                                         group=\"end_date, dropoff_census_tract\",\n",
     "                                         pickup=False)"
    ]
   },
@@ -394,8 +401,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "uber_pickups = uber_pickups.rename(columns={'start_date':'date', 'start_tract':'tract', 'rides':'start_rides'})\n",
-    "uber_dropoffs = uber_dropoffs.rename(columns={'end_date':'date', 'end_tract':'tract', 'rides':'end_rides'})\n",
+    "uber_pickups = uber_pickups.rename(columns={'start_date':'date', 'pickup_census_tract':'tract', 'rides':'start_rides'})\n",
+    "uber_dropoffs = uber_dropoffs.rename(columns={'end_date':'date', 'dropoff_census_tract':'tract', 'rides':'end_rides'})\n",
+    "uber_pickups['tract'] = pd.to_numeric(uber_pickups['tract'], 'coerce')\n",
+    "uber_dropoffs['tract'] = pd.to_numeric(uber_dropoffs['tract'], 'coerce')\n",
     "uber_rides = uber_pickups.merge(uber_dropoffs, how='outer')\n",
     "uber_rides['rides'] = uber_rides['start_rides'].fillna(0) + uber_rides['end_rides'].fillna(0)"
    ]
@@ -409,14 +418,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_rides.to_csv(train_rides_out, index=False)\n",
     "bus_rides.to_csv(bus_rides_out, index=False)\n",
-    "bike_rides.to_csv(bike_rides_out, index=False)\n",
-    "uber_rides.to_csv(uber_rides_out, index=False)"
+    "bike_rides.to_parquet(bike_rides_out, index=False)\n",
+    "uber_rides.to_parquet(uber_rides_out, index=False)"
    ]
   }
  ],
