--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -8,11 +8,14 @@
    "source": [
     "import geopandas as gpd\n",
     "import os\n",
+    "import pandas as pd\n",
     "from shapely.geometry import Point\n",
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS, DATA_FOLDER,\n",
-    "                                OHARE_CENTROID, MIDWAY_CENTROID)\n",
-    "from data.geo import meter_to_foot, dms_to_decimal"
+    "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
+    "                                DNC_START, DNC_END)\n",
+    "from data.geo import meter_to_foot, dms_to_decimal\n",
+    "from data.datemath import to_ymd"
    ]
   },
   {
@@ -29,12 +32,22 @@
     "comm_file_in = os.path.join(DATA_FOLDER, \"raw\", \"communities.geojson\")\n",
     "poi_file_in = os.path.join(DATA_FOLDER, \"raw\", \"poi_buildings.geojson\")\n",
     "\n",
+    "train_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"train_rides.csv\")\n",
+    "bus_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bus_rides.csv\")\n",
+    "bike_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"bike_rides.geoparquet\")\n",
+    "uber_rides_in = os.path.join(DATA_FOLDER, \"raw\", \"uber_rides.parquet\")\n",
+    "\n",
     "train_file_out = os.path.join(DATA_FOLDER, \"interim\", \"train_stations.geojson\")\n",
     "bus_routes_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
     "bus_stops_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
     "bike_stations_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations.geojson\")\n",
     "tract_file_out = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geojson\")\n",
-    "comm_file_out = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")"
+    "comm_file_out = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")\n",
+    "\n",
+    "train_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
+    "bus_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_rides.csv\")\n",
+    "bike_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_rides.geoparquet\")\n",
+    "uber_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"uber_rides.parquet\")"
    ]
   },
   {
@@ -60,17 +73,36 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Airports"
+    "train_rides = pd.read_csv(train_rides_in)\n",
+    "bus_rides = pd.read_csv(bus_rides_in)\n",
+    "bike_rides = gpd.read_parquet(bike_rides_in)\n",
+    "uber_rides = pd.read_parquet(uber_rides_in)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## CTA Airports"
+    "# Time-Invariant Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Airports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### -> CTA"
    ]
   },
   {
@@ -105,7 +137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Uber Airports"
+    "### -> Uber"
    ]
   },
   {
@@ -123,8 +155,9 @@
    "source": [
     "oh_xy = dms_to_decimal(*OHARE_CENTROID[1]), dms_to_decimal(*OHARE_CENTROID[0])\n",
     "oh_xy = Point(*oh_xy) # lng/lat\n",
-    "oh_tract = tract_points.set_index('geoid10').geometry.contains(gpd.GeoSeries([oh_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0])\n",
-    "oh_comm = comm_points.set_index('area_num_1').geometry.contains(gpd.GeoSeries([oh_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0])"
+    "oh_xy = gpd.GeoSeries([oh_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0]\n",
+    "oh_tract = tract_points.set_index('geoid10').geometry.to_crs(LOCAL_CRS).contains(oh_xy)\n",
+    "oh_comm = comm_points.set_index('area_num_1').geometry.to_crs(LOCAL_CRS).contains(oh_xy)"
    ]
   },
   {
@@ -135,8 +168,9 @@
    "source": [
     "mdw_xy = dms_to_decimal(*MIDWAY_CENTROID[1]), dms_to_decimal(*MIDWAY_CENTROID[0])\n",
     "mdw_xy = Point(*mdw_xy) # lng/lat\n",
-    "mdw_tract = tract_points.set_index('geoid10').geometry.contains(gpd.GeoSeries([mdw_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0])\n",
-    "mdw_comm = comm_points.set_index('area_num_1').geometry.contains(gpd.GeoSeries([mdw_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0])"
+    "mdw_xy = gpd.GeoSeries([mdw_xy], crs=WORLD_CRS).to_crs(LOCAL_CRS).iloc[0]\n",
+    "mdw_tract = tract_points.set_index('geoid10').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)\n",
+    "mdw_comm = comm_points.set_index('area_num_1').geometry.to_crs(LOCAL_CRS).contains(mdw_xy)"
    ]
   },
   {
@@ -145,15 +179,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_points['airport'] = oh_tract | mdw_tract\n",
-    "comm_points['airport'] = oh_comm | mdw_comm"
+    "tract_points['airport'] = tract_points['geoid10'].map(oh_tract) | tract_points['geoid10'].map(mdw_tract)\n",
+    "comm_points['airport'] = comm_points['area_num_1'].map(oh_comm) | comm_points['area_num_1'].map(mdw_comm)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Bike Airports"
+    "### -> Divvy"
    ]
   },
   {
@@ -169,25 +203,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations['airport'] = False"
+    "bike_stations['airport'] = False\n",
+    "bike_rides['airport'] = False"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UC and MP Catchements"
+    "## United Center, McCormick Place catchements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def code_buffers(gdf: gpd.GeoDataFrame, geom:gpd.GeoSeries, geom_prefix:str, dists:list[int]):\n",
+    "uc_building = poi_buildings[poi_buildings['name'] == 'UNITED CENTER']\n",
+    "mp_building = poi_buildings[poi_buildings['name'] == 'HYATT REGENCY MCCORMICK PLACE']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def buffered_intersects(gdf: gpd.GeoDataFrame, geom:gpd.GeoSeries, geom_prefix:str, dists:list[int]):\n",
     "    \"\"\"\n",
-    "    Computes multiple buffer distances around geom and whether each row of gdf is within buffer.\n",
+    "    Computes multiple buffer distances around geom and EQUIVALENTLY computes:\n",
+    "        - whether each row of gdf intersects buffer\n",
+    "        - whether buffer intersects each row of gdf\n",
     "    Params:\n",
     "        - gdf: compares each row of gdf to geom\n",
     "        - geom: the shape to compute buffers around. EXPECTS SINGLE ROW\n",
@@ -203,13 +250,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coded as** *\"is this station within the catchement of the POI\"*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "uc_building = poi_buildings[poi_buildings['name'] == 'UNITED CENTER']\n",
-    "mp_building = poi_buildings[poi_buildings['name'] == 'HYATT REGENCY MCCORMICK PLACE']"
+    "# Stations are coded as \n",
+    "train_stations = train_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "bike_stations = bike_stations.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "bike_rides = bike_rides.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "bus_stops = bus_stops.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "\n",
+    "train_stations = train_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
+    "bike_stations = bike_stations.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
+    "bike_rides = bike_rides.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
+    "bus_stops = bus_stops.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Coded as** *\"is this POI catchement intersecting the tract\"*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tract_points = tract_points.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "comm_points = comm_points.pipe(buffered_intersects, uc_building, \"uc\", [400,800,1600])\n",
+    "\n",
+    "tract_points = tract_points.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])\n",
+    "comm_points = comm_points.pipe(buffered_intersects, mp_building, \"mp\", [400,800,1600])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Station Tracts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Label the station tracts so we can aggregate to tract-level to match uber data."
    ]
   },
   {
@@ -218,16 +314,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_stations = train_stations.pipe(code_buffers, uc_building, \"uc\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(code_buffers, uc_building, \"uc\", [400,800,1600])\n",
-    "bus_stops = bus_stops.pipe(code_buffers, uc_building, \"uc\", [400,800,1600])\n",
-    "\n",
-    "train_stations = train_stations.pipe(code_buffers, mp_building, \"mp\", [400,800,1600])\n",
-    "bike_stations = bike_stations.pipe(code_buffers, mp_building, \"mp\", [400,800,1600])\n",
-    "bus_stops = bus_stops.pipe(code_buffers, mp_building, \"mp\", [400,800,1600])\n",
-    "\n",
-    "# TODO! Code tracts and community eareas??\n",
-    "# Also maybe code the UC and MP community areas in the other things?"
+    "def code_tract(gdf):\n",
+    "    \"\"\"\n",
+    "    Spatial join point to census tract\n",
+    "    \"\"\"\n",
+    "    coded_tracts = gdf[['geometry']].sjoin(tract_points[['geoid10','geometry']], how='left', predicate='within')\n",
+    "    coded_comms = gdf[['geometry']].sjoin(comm_points[['area_num_1','geometry']], how='left', predicate='within')\n",
+    "    gdf = pd.concat([gdf, \n",
+    "                    coded_tracts['geoid10'].rename('tract'), \n",
+    "                    coded_comms['area_num_1'].rename('comm_area')],\n",
+    "                    axis=1)\n",
+    "    return gdf"
    ]
   },
   {
@@ -236,52 +333,62 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# We only have ridership by bus route, not bus stop, so to aggregate stops to routes,\n",
-    "# we'll compute the mean number of stops within the buffer per route.\n",
-    "buffer_cols = ['uc_400','uc_800','uc_1600','mp_400','mp_800','mp_1600','airport']\n",
-    "bus_stops_features = bus_stops.groupby('route',as_index=False)[buffer_cols].mean()\n",
-    "bus_routes = bus_routes.merge(bus_stops_features, how='left')"
+    "train_stations = train_stations.pipe(code_tract)\n",
+    "bike_stations = bike_stations.pipe(code_tract)\n",
+    "bus_stops = bus_stops.pipe(code_tract)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DNC"
+    "# Time-Varying Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## DNC"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raise NotImplementedError(\"Need to pull in rides!\")\n",
-    "        # .assign(DNC = lambda x: (x['date'] >= DNC_START_ISO) & (x['date'] <= DNC_END_ISO))\n"
+    "train_rides['DNC'] = (train_rides['date'] >= DNC_START) & (train_rides['date'] <= DNC_END)\n",
+    "bus_rides['DNC'] = (bus_rides['date'] >= DNC_START) & (bus_rides['date'] <= DNC_END)\n",
+    "bike_rides['DNC'] = (bike_rides['date'].apply(to_ymd) >= DNC_START) & (bike_rides['date'].apply(to_ymd) <= DNC_END)\n",
+    "uber_rides['DNC'] = (uber_rides['date'] >= DNC_START) & (uber_rides['date'] <= DNC_END)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daytype"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raise NotImplementedError(\"Finish refactor!\")\n",
-    "def coalesce(df, left, right, coalesced):\n",
-    "    predicate = df[left].isna()\n",
-    "    df[coalesced] = df[left]\n",
-    "    df[predicate][coalesced] = df[predicate][right]\n",
-    "    return df.drop(columns=[left,right])\n",
-    "\n",
-    "# Half of the bike rides are already denormalized and don't need bike-stations\n",
-    "# So we do a left-join and coalesce to get the missing geometries\n",
-    "bike_rides = bike_rides.merge(bike_stations.assign(station_id=bike_stations.station_id.astype(str)),\n",
-    "                                on=['station_id','vintage'], how='left')\n",
-    "bike_rides = bike_rides.pipe(coalesce, 'geometry_x','geometry_y','geometry')\n",
-    "# Bikes don't have the daytype column so we'll impute it\n",
     "daytypes = pd.concat([train_rides[['date','daytype']],bus_rides[['date','daytype']]],ignore_index=True)\n",
-    "daytypes = daytypes.groupby('date')['daytype'].first()\n",
-    "bike_rides['daytype'] = bike_rides['date'].map(daytypes)\n"
+    "daytypes = daytypes.groupby('date')['daytype'].first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_rides['daytype'] = bike_rides['date'].map(daytypes)\n",
+    "uber_rides['daytype'] = uber_rides['date'].map(daytypes)"
    ]
   },
   {
@@ -293,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,6 +410,18 @@
     "tract_points.to_file(tract_file_out, index=False)\n",
     "comm_points.to_file(comm_file_out, index=False)\n",
     "bike_stations.to_file(bike_stations_file_out, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_rides.to_csv(train_rides_out, index=False)\n",
+    "bus_rides.to_csv(bus_rides_out, index=False)\n",
+    "bike_rides.to_parquet(bike_rides_out, index=False)\n",
+    "uber_rides.to_parquet(uber_rides_out, index=False)"
    ]
   }
  ],
