finish implementing panel dataset

--- a/pipeline/5-get-ridership.ipynb
+++ b/pipeline/5-get-ridership.ipynb
@@ -17,7 +17,7 @@
     "from data.cta import CTAClient\n",
     "from data.divvy import DivvyClient\n",
     "from data.uber import UberClient\n",
-    "from data.datemath import iso_to_ymd"
+    "from data.datemath import iso_to_ymd, is_iso"
    ]
   },
   {
@@ -193,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:24, 24.30s/it]"
+      "1it [00:28, 28.37s/it]"
      ]
     },
     {
@@ -207,7 +207,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2it [00:27, 11.74s/it]"
+      "2it [00:31, 13.34s/it]"
      ]
     },
     {
@@ -221,7 +221,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "3it [00:30,  8.09s/it]"
+      "3it [00:35,  9.16s/it]"
      ]
     },
     {
@@ -235,7 +235,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "4it [00:36,  6.98s/it]"
+      "4it [00:45,  9.49s/it]"
      ]
     },
     {
@@ -249,7 +249,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "5it [00:43,  7.21s/it]"
+      "5it [00:56, 10.24s/it]"
      ]
     },
     {
@@ -263,7 +263,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "6it [00:52,  7.75s/it]"
+      "6it [01:08, 10.65s/it]"
      ]
     },
     {
@@ -277,7 +277,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "7it [01:02,  8.45s/it]"
+      "7it [01:24, 12.39s/it]"
      ]
     },
     {
@@ -291,7 +291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "8it [01:11,  8.65s/it]"
+      "8it [01:42, 14.26s/it]"
      ]
     },
     {
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "9it [01:21,  9.06s/it]\n"
+      "9it [02:04, 13.88s/it]\n"
      ]
     }
    ],
@@ -406,7 +406,8 @@
     "uber_pickups['tract'] = pd.to_numeric(uber_pickups['tract'], 'coerce')\n",
     "uber_dropoffs['tract'] = pd.to_numeric(uber_dropoffs['tract'], 'coerce')\n",
     "uber_rides = uber_pickups.merge(uber_dropoffs, how='outer')\n",
-    "uber_rides['rides'] = uber_rides['start_rides'].fillna(0) + uber_rides['end_rides'].fillna(0)"
+    "uber_rides['rides'] = uber_rides['start_rides'].fillna(0) + uber_rides['end_rides'].fillna(0)\n",
+    "uber_rides['date'] = uber_rides['date'].apply(lambda x: iso_to_ymd(x) if is_iso(x) else x)"
    ]
   },
   {
