--- a/pipeline/6-code-features.ipynb
+++ b/pipeline/6-code-features.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,7 @@
     "import os\n",
     "import pandas as pd\n",
     "from shapely.geometry import Point\n",
+    "from shapely import from_wkt\n",
     "\n",
     "from data.constants import (WORLD_CRS, LOCAL_CRS, DATA_FOLDER,\n",
     "                                OHARE_CENTROID, MIDWAY_CENTROID,\n",
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +42,7 @@
     "bus_routes_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_routes.geojson\")\n",
     "bus_stops_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bus_stops.geojson\")\n",
     "bike_stations_file_out = os.path.join(DATA_FOLDER, \"interim\", \"bike_stations.geojson\")\n",
-    "tract_file_out = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geojson\")\n",
+    "tract_file_out = os.path.join(DATA_FOLDER, \"interim\", \"tracts.geoparquet\")\n",
     "comm_file_out = os.path.join(DATA_FOLDER, \"interim\", \"communities.geojson\")\n",
     "\n",
     "train_rides_out = os.path.join(DATA_FOLDER, \"interim\", \"train_rides.csv\")\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,23 +115,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations['airport'] = (train_stations.station_name == \"O'Hare\") \\\n",
-    "                            | (train_stations.station_name == \"Midway\")"
+    "                            | (train_stations.station_name == \"Midway\")\n",
+    "train_stations['airport'] = train_stations['airport'].astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Note: We only check for Midway because CTA busses don't go directly into O'Hare,\n",
     "#       nor even to the adjacent Mixed Modal Transit center.\n",
-    "bus_stops['airport'] = bus_stops['PUBLIC_NAM'] == \"Midway Orange Line Station\""
+    "bus_stops['airport'] = (bus_stops['PUBLIC_NAM'] == \"Midway Orange Line Station\").astype(float)"
    ]
   },
   {
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,12 +177,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tract_points['airport'] = tract_points['geoid10'].map(oh_tract) | tract_points['geoid10'].map(mdw_tract)\n",
-    "comm_points['airport'] = comm_points['area_num_1'].map(oh_comm) | comm_points['area_num_1'].map(mdw_comm)"
+    "tract_points['airport'] = (tract_points['geoid10'].map(oh_tract) | tract_points['geoid10'].map(mdw_tract)).astype(float)\n",
+    "comm_points['airport'] = (comm_points['area_num_1'].map(oh_comm) | comm_points['area_num_1'].map(mdw_comm)).astype(float)"
    ]
   },
   {
@@ -199,12 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_stations['airport'] = False\n",
-    "bike_rides['airport'] = False"
+    "bike_stations['airport'] = 0.0\n",
+    "bike_rides['airport'] = 0.0"
    ]
   },
   {
@@ -216,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,13 +331,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations = train_stations.pipe(code_tract)\n",
     "bike_stations = bike_stations.pipe(code_tract)\n",
+    "bike_rides = bike_rides.pipe(code_tract)\n",
     "bus_stops = bus_stops.pipe(code_tract)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tract Centroids"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just converting this to geom dtype."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tract_points['centroid'] = gpd.GeoSeries(tract_points['centroid'].apply(from_wkt), crs=tract_points.crs)"
    ]
   },
   {
@@ -354,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,11 +409,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "bike_rides['daytype'] = bike_rides['date'].map(daytypes)\n",
+    "bike_rides['daytype'] = bike_rides['date'].apply(to_ymd).map(daytypes)\n",
     "uber_rides['daytype'] = uber_rides['date'].map(daytypes)"
    ]
   },
@@ -400,21 +426,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_stations.to_file(train_file_out, index=False)\n",
     "bus_routes.to_file(bus_routes_file_out, index=False)\n",
     "bus_stops.to_file(bus_stops_file_out, index=False)\n",
-    "tract_points.to_file(tract_file_out, index=False)\n",
+    "tract_points.to_parquet(tract_file_out, index=False)\n",
     "comm_points.to_file(comm_file_out, index=False)\n",
     "bike_stations.to_file(bike_stations_file_out, index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
